Fixed details lined color in dark mode

--- a/styles/components/details.scss
+++ b/styles/components/details.scss
@@ -147,12 +147,13 @@ details[class*="#{$border-radius-prefix}-"]:not([open]) > summary,
   --border-radius: 0;
   --line-width:    var(--border-width);
   --line-style:    var(--border-style);
-  --line-color:    var(--border-color);
+  --line-color:  var(--border-color);
 }
 
 :where(#{$dark-theme}) {
-  details.lined, .details.line {
-    --border-color: var(--color-25);
+  details.lined, .details.line, details.border, .details.border {
+    --border-color:  var(--color-25);
+    --line-color:  var(--border-color);
   }
 }
 
